--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
+  "type": "module",
   "devDependencies": {
     "express": "^4.18.2"
   },
   "dependencies": {
-    "express-fileupload": "^1.4.3"
+    "express-fileupload": "^1.4.3",
+    "node-fetch": "^3.3.2"
   }
 }
